--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -105,3 +105,7 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
     font-family: Arial, Helvetica, sans-serif;
 
 }
+
+.loading{
+    margin-top: 250px;
+}
