--- a/client/src/components/CountryDetail/countryDetail.module.css
+++ b/client/src/components/CountryDetail/countryDetail.module.css
@@ -176,6 +176,7 @@
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
     width: 100%;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 
@@ -242,7 +243,7 @@
 }
 
 .cargando{
-    margin-top: 40px;
+    margin-top: 200px;
 }
 
 .refresh{
