--- a/client/src/components/Home/Filters/filters.module.css
+++ b/client/src/components/Home/Filters/filters.module.css
@@ -11,7 +11,7 @@ margin-right: 50px;
 }
 
 .select1{
-    width: 150px;
+    width: 170px;
     margin-right:10px ;
     position: relative;
     background-color: rgb(0, 0, 0);
@@ -24,6 +24,7 @@ margin-right: 50px;
 .radius{
     border-radius: 9px;
     background-color: rgb(35, 35, 35);
+    max-width: 150px;
  }
 
 .select1::focus{
