--- a/client/src/components/Paginado/paginado.module.css
+++ b/client/src/components/Paginado/paginado.module.css
@@ -30,14 +30,28 @@
 }
 
 .button:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     
 }
 
-.button:focus{
-    color: white;
+.buttonf{
+    color: rgb(244, 246, 247);
     transform: scale(1.2);
-      
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb (145, 157, 168);
+    width: 3rem;
+    cursor: pointer;
+    transition: all 0.5s;
+    height: 50%;
+    border: 0px;
+    border-left: 0.5px rgba(119, 118, 118, 0.232) solid;
+    border-right: 0.5px rgba(109, 107, 107, 0.263) solid;
+    font-size: 16px;
+    background-color: rgb(9, 9, 9);
+    padding: 0px;
+    margin: 0px;
       
 }
 
@@ -47,9 +61,25 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(9, 9, 9);
-    width: 1250px;
+    width: 1350px;
     border-radius: 20px;
     height: 30px;
     margin-bottom: 15px;
     margin-top: 15px;
+}
+
+.nav{
+    margin-left: 20px;
+    margin-right: 20px;
+    border: grey 1px solid;
+    font-size: 16px;
+    background-color: rgb(9, 9, 9);
+    color: white;
+    cursor: pointer;
+    transition: all 0.25s;
+}
+
+.nav:hover{
+    color: black;
+    background-color: rgba(255, 255, 255, 0.281);
 }
