--- a/client/src/components/Home/Filters/filters.module.css
+++ b/client/src/components/Home/Filters/filters.module.css
@@ -11,26 +11,31 @@ margin-right: 50px;
 }
 
 .select1{
-    width: 170px;
+    width: 150px;
     margin-right:10px ;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(35, 35, 35);
     color: white;
-    
+    border: 0px solid white;
     text-align: center;
+    border-radius: 3px;
+    
     
 }
 
 .radius{
     border-radius: 9px;
-    background-color: rgb(35, 35, 35);
+    background-color: rgba(35, 35, 35, 0);
     max-width: 150px;
+    border: 0px solid wheat;
+    padding: 0px;
  }
 
-.select1::focus{
-    border: 1px solid black;
-    
-}
+ .radius:hover{
+    background-color: rgb(35, 35, 35);
+ }
+
+
 
 
 
@@ -38,14 +43,11 @@ margin-right: 50px;
     width: 150px;
     margin-right:10px ;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(35, 35, 35);
     color: white;
-    
+    border: 0px solid white;
     text-align: center;
+    border-radius: 3px;
     
 }
 
-.select2::focus{
-    border: 1px solid black;
-    
-}
