--- a/client/src/components/Home/Orders/orders.module.css
+++ b/client/src/components/Home/Orders/orders.module.css
@@ -1,3 +1,13 @@
+body::-webkit-scrollbar{
+    background-color: rgb(35, 35, 35);
+    width: 7px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background: gray;
+    border-radius: 9px;
+}
+
 .divFlex{
     display: flex;
     flex-direction: row;
@@ -15,10 +25,12 @@
     width: 150px;
     margin-right:10px ;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(35, 35, 35);
     color: white;
-   
+    border: 0px solid white;
     text-align: center;
+    border-radius: 3px;
+    
     
 }
 
@@ -42,10 +54,12 @@
     width: 150px;
     margin-right:10px ;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(35, 35, 35);
     color: white;
-    
+    border: 0px solid white;
     text-align: center;
+    border-radius: 3px;
+    
     
 }
 
