--- a/client/src/components/Home/SearchBar/searchBar.module.css
+++ b/client/src/components/Home/SearchBar/searchBar.module.css
@@ -3,12 +3,38 @@
 .santi{
     
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(7, 10, 9) 35%, rgb(2, 2, 2) 74%, rgba(0,0,0,1) 100%);
     height: 70px;
     align-items: center;
+    width: 61.5%;
     
+}
+
+.ubicado{
+    display: flex;
+    width: 30%;
+}
+
+.buton{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(207, 207, 134, 0.397);
+    color: rgb(255, 250, 250);
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s ease-in-out;
+}
+
+.buton:hover{
+color: rgb(255, 255, 255);
+background-color: purple;
+border: 1px solid rgba(255, 255, 255, 0.397);
 }
 
 .a{
@@ -20,9 +46,15 @@ margin-bottom:8px;
 border: none;
 justify-content: center;
 text-align: center;
+border: none;
+outline: none
 
 
+}
 
+
+.a:focus{
+    border: none
 }
 
 
