--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -1,4 +1,4 @@
-body{
+.body{
     background-image: url(./1580.jpg);
     background-size: cover;
     background-position: center;
@@ -87,15 +87,17 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
     position: absolute;
     left: 50px;
     top :20px;
-    border: 2px solid rgba(58, 57, 57, 0.549);;
-     border-radius: 6px;
-    transition:all .1s ease-in-out ;
-    background-color: rgb(199, 198, 198);
-    border: 1px;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-    height: 25px;
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(207, 207, 134, 0.397);
+    color: rgb(255, 250, 250);
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s ease-in-out;
 }
 
 .refresh:hover{
@@ -169,3 +171,37 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
     color: rgb(248, 245, 245);
 
 }
+
+.divGeneral{
+    display: flex;
+    width: 100%;
+}
+
+.buton{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(207, 207, 134, 0.397);
+    color: rgb(255, 250, 250);
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s ease-in-out;
+    margin-left: 430px;
+}
+
+.buton:hover{
+color: rgb(255, 255, 255);
+background-color: purple;
+border: 1px solid rgba(255, 255, 255, 0.397);
+}
+
+.diosMio{
+    display: flex;
+justify-content: center;
+align-items: center;
+    width: 38.5%;
+}
+
