--- a/client/src/components/LandingP/landing.module.css
+++ b/client/src/components/LandingP/landing.module.css
@@ -15,7 +15,7 @@ body {
 
 .bienvenidos {
     position: relative;
-    bottom: 6.5rem;
+    top: 3.5rem; 
     display: flex;
     margin-top: 0px;
     /* background-color: rgb(71, 108, 107); */
@@ -31,6 +31,8 @@ body {
 .boton {
     /* position: relative;
     bottom: 9.5rem; */
+    position: relative;
+    top: 6.5rem;
     min-width: 200px;
     height: 60px;
     color: #fff;
@@ -58,11 +60,11 @@ body {
     align-items: center;
   }
 
-  .img{
+  /* .img{
     display: flex;
     width: 9.25rem;
     height: 9.25rem;
     position: relative;
     left: 110rem;
     top: 1rem;
-  }
+  } */
