--- a/client/src/components/Paginado/paginado.module.css
+++ b/client/src/components/Paginado/paginado.module.css
@@ -72,7 +72,7 @@
     margin-left: 20px;
     margin-right: 20px;
     border: grey 1px solid;
-    font-size: 16px;
+    font-size: 13px;
     background-color: rgb(9, 9, 9);
     color: white;
     cursor: pointer;
@@ -80,6 +80,6 @@
 }
 
 .nav:hover{
-    color: black;
-    background-color: rgba(255, 255, 255, 0.281);
+    color: rgb(31, 24, 24);
+    
 }
