--- a/client/src/components/AboutMe/aboutMe.module.css
+++ b/client/src/components/AboutMe/aboutMe.module.css
@@ -31,13 +31,16 @@
     align-items: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.452);
     
+    
 }
 
 .name{
-    margin: 0px;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    border-bottom: 2px black solid;
+    
+    margin-top: 35px;
+    font-size: 40px;
+    font-family: 'Josefin Sans', sans-serif;
+    letter-spacing: 3px;
+    
    
 }
 
