--- a/client/src/components/Home/SearchBar/searchBar.module.css
+++ b/client/src/components/Home/SearchBar/searchBar.module.css
@@ -3,21 +3,22 @@
 .santi{
     
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(7, 10, 9) 35%, rgb(2, 2, 2) 74%, rgba(0,0,0,1) 100%);
     height: 70px;
     align-items: center;
-    width: 61.5%;
+    width: 100%;
+    margin-left: 710px;
     
 }
 
-.ubicado{
-    display: flex;
-    width: 30%;
+.caca{
+    padding-left: 500px;
 }
 
 .buton{
+    
     width: 200px;
     height: 40px;
     border-radius: 10px;
@@ -32,9 +33,9 @@
 }
 
 .buton:hover{
-color: rgb(255, 255, 255);
-background-color: purple;
-border: 1px solid rgba(255, 255, 255, 0.397);
+background-color: rgb(248, 248, 248);
+    color: rgb(107, 138, 165);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .a{
