--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -1,4 +1,4 @@
-.body{
+body{
     background-image: url(./1580.jpg);
     background-size: cover;
     background-position: center;
@@ -85,7 +85,7 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
 
 .refresh{
     position: absolute;
-    left: 50px;
+    left: 25px;
     top :20px;
     width: 200px;
     height: 40px;
@@ -175,6 +175,7 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
 .divGeneral{
     display: flex;
     width: 100%;
+    background-color: black;
 }
 
 .buton{
@@ -193,15 +194,15 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
 }
 
 .buton:hover{
-color: rgb(255, 255, 255);
-background-color: purple;
-border: 1px solid rgba(255, 255, 255, 0.397);
+    background-color: rgb(248, 248, 248);
+    color: rgb(107, 138, 165);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .diosMio{
     display: flex;
-justify-content: center;
-align-items: center;
-    width: 38.5%;
+     justify-content: flex-start;
+    align-items: center;
+    width: 40.5%;
 }
 
