--- a/client/src/components/Loading/loading.module.css
+++ b/client/src/components/Loading/loading.module.css
@@ -47,18 +47,18 @@
     }
 
     .refresh{
-        position: absolute;
-        left: 50px;
-        top :20px;
-        border: 2px solid rgba(58, 57, 57, 0.549);;
-         border-radius: 6px;
-        transition:all .1s ease-in-out ;
-        background-color: rgb(199, 198, 198);
-        border: 1px;
-        color: rgb(0, 0, 0);
-        cursor: pointer;
-        height: 25px;
-        font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(207, 207, 134, 0.397);
+    color: rgb(255, 250, 250);
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s ease-in-out;
+    
     }
     .refresh:hover{
         background-color: rgb(248, 248, 248);
