--- a/client/src/components/Home/SearchBar/searchBar.module.css
+++ b/client/src/components/Home/SearchBar/searchBar.module.css
@@ -3,13 +3,13 @@
 .santi{
     
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(7, 10, 9) 35%, rgb(2, 2, 2) 74%, rgba(0,0,0,1) 100%);
     height: 70px;
     align-items: center;
     width: 100%;
-    margin-left: 710px;
+    
     
 }
 
@@ -83,7 +83,6 @@ border-radius: 6px;
     background-color: #313131;
     height: 39px;
     align-items: center;
-    
     width: 450px;
     line-height: 45px;
     border-radius: 20px;
