--- a/client/src/components/Home/SearchBar/searchBar.module.css
+++ b/client/src/components/Home/SearchBar/searchBar.module.css
@@ -1,20 +1,33 @@
+.pa{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+}
 
+.oa{
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+}
 
 .santi{
     
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(7, 10, 9) 35%, rgb(2, 2, 2) 74%, rgba(0,0,0,1) 100%);
     height: 70px;
     align-items: center;
-    width: 100%;
-    
+    width: 60%;
     
 }
 
 .caca{
-    padding-left: 500px;
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
 }
 
 .buton{
@@ -37,6 +50,26 @@ background-color: rgb(248, 248, 248);
     color: rgb(107, 138, 165);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.refresh{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid rgba(207, 207, 134, 0.397);
+    color: rgb(255, 250, 250);
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s ease-in-out;
+}
+
+.refresh:hover{
+    background-color: rgb(248, 248, 248);
+        color: rgb(107, 138, 165);
+        font-family: Arial, Helvetica, sans-serif;
+    }
 
 .a{
 height: 1.5rem;
@@ -83,6 +116,7 @@ border-radius: 6px;
     background-color: #313131;
     height: 39px;
     align-items: center;
+    
     width: 450px;
     line-height: 45px;
     border-radius: 20px;
