--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -79,8 +79,9 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
 
 .paginate{
     display: flex;
+    width: 100%;
     justify-content: center;
-    border-radius: 20px;
+    align-items: center;
 }
 
 .refresh{
@@ -174,6 +175,7 @@ border: 1px rgba(247, 240, 229, 0.244) solid;
 
 .divGeneral{
     display: flex;
+    justify-content: flex-end;
     width: 100%;
     background-color: black;
 }
