--- a/client/src/components/CreateActivity/createActivity.module.css
+++ b/client/src/components/CreateActivity/createActivity.module.css
@@ -14,7 +14,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
+    margin-top: 19rem;
     width: 20%;
     height: 100%;
 
@@ -39,7 +40,7 @@
     color: rgb(0, 0, 0);
     border: 1.3px solid rgba(142, 178, 80, 0.223);
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     transition: all 0.5s ease-in-out;
     
@@ -122,12 +123,13 @@
 
 .placeone{
     width: 30%;
+    margin-bottom: 2.5rem;
 }
 
 .placetwo{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    height: 100%;
     align-items: center;
     width: 40%;
 }
