--- a/client/src/components/AboutMe/aboutMe.module.css
+++ b/client/src/components/AboutMe/aboutMe.module.css
@@ -14,12 +14,24 @@
     width: 100%;
     height: 300px;
 }
+.containertwo{
+    height: 100%;
+    width: 50%;
+}
+
+.container{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 .box{
-    margin-top: 70px;
-    width: 50%;
-    height: 35%;
-    margin-left: 800px;
+    display: flex;
+    width: 100%;
+    height: 30%;
+    
        
 }
 
@@ -49,10 +61,10 @@
      align-items: center;
     width: 100%;
     height: 80%;
-    justify-content: center;
+    justify-content: space-around;
     background-color: rgba(248, 248, 248, 0.548);
     border-radius: 0px; 
-    justify-content: space-around;
+    
     text-decoration: none;
     
     
@@ -61,12 +73,13 @@
 .margin{
     margin-left: 28px;
     margin-right: 28px;
+    max-width: 10%;
 }
 
 .boxeo{
-    margin-top: 70px;
+    
     width: 100%;
-    height: 100%;
+    height: 35%;
     border-radius: 10px;
 }
 
@@ -100,7 +113,6 @@
     cursor: pointer;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 30px;
     transition: 0.3s ease-in-out;
 }
 
