--- a/client/src/components/CreateActivity/createActivity.module.css
+++ b/client/src/components/CreateActivity/createActivity.module.css
@@ -32,19 +32,55 @@
 }
 
 .buton{
-    width: 12.5rem;
-    height: 40px;
-    border-radius: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(221, 223, 221);
-    color: rgb(0, 0, 0);
-    border: 1.3px solid rgba(142, 178, 80, 0.223);
+
+    height: 30px;
+    width: 200px;
+    background-color: rgba(58, 57, 57, 0.549);
+    color: rgb(186, 183, 183);
+    border-radius: 1rem;
     cursor: pointer;
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    transition: all 0.5s ease-in-out;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    margin-top: 0px;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    border: 1px rgba(247, 240, 229, 0.244) solid;
     
-}
+    }
+    
+    .buton::before{
+        
+        content: "Volver al home 🏠 ";
+        color: rgb(186, 183, 183);
+        font-size:12px;
+        transform: translate(-50%, -50%);
+        font-family: Arial, Helvetica, sans-serif;
+        position: absolute;
+        transition: all 0.3s ease-in-out;
+        top: 11.5px;
+        
+        
+    }
+    
+    
+    .buton:hover::before{
+        top: 60px;
+    }
+    
+    .buton::after{
+        content: "Click aqui 🖱️";
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 70px;
+        font-size:12px;
+        transition:all .3s ease-in-out ;
+    }
+    
+    .buton:hover::after{
+     top: 12px;
+    }
+    
 
 .boton{
     width: 7.5rem;
@@ -66,9 +102,7 @@
     background-color: green;
 }
 
-.buton:hover{
-    transform: scale(1.1);
-}
+
 
 
 
